impress: prevent menu transition icons from being cut off with scroll
-Added scroll snapping to the container so each menu item slides into full view
-Set the items to align perfectly at the top when they snap
-Adjusted element heights to prevent icon cutoff during scroll transitions

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -581,9 +581,16 @@ html[data-theme='dark'] .savemodified.unotoolbutton .unobutton img {
 }
 
 #transitions_icons.ui-iconview.notebookbar {
+	height: 55px;
 	max-height: 75px;
 	grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 	flex-grow: 1;
+	scroll-snap-type: y mandatory;
+	scroll-behavior: smooth;
+}
+
+#transitions_icons.ui-iconview.notebookbar > *  {
+	scroll-snap-align: start;
 }
 
 /* Table Tab */
